--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/frontend/libraries/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="/aeris/frontend/libraries/bootstrap/css/bootstrap.css">
     <!--My Css-->
-    <link rel="stylesheet" href="/frontend/style/main.css">
+    <link rel="stylesheet" href="/aeris/frontend/style/main.css">
 
     <!-- Google Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
 
     <title>AERIS</title>
   </head>
-  <link rel="icon" type="image/x-icon" href="/frontend/img/favicon.png">
+  <link rel="icon" type="image/x-icon" href="/aeris/frontend/img/favicon.png">
   <body>
 <!--Header-->
 <header class="header">
@@ -31,9 +31,9 @@
             </div>
             <div class="col-2">
                 <div class="row py-2">
-                    <img src="/frontend/img/person.svg">
-                    <img src="/frontend/img/search.svg">
-                    <img src="/frontend/img/shopping_bag.svg">
+                    <img src="/aeris/frontend/img/person.svg">
+                    <img src="/aeris/frontend/img/search.svg">
+                    <img src="/aeris/frontend/img/shopping_bag.svg">
                 </div>
             </div>
         </div>
@@ -62,13 +62,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="/frontend/img/hero1.jpg" alt="First slide">
+                <img class="d-block w-100" src="/aeris/frontend/img/hero1.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/frontend/img/hero2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="/aeris/frontend/img/hero2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/frontend/img/hero3.jpg" alt="Third slide">
+                <img class="d-block w-100" src="/aeris/frontend/img/hero3.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -88,9 +88,9 @@
 <section class="coupon">
     <div class="container">
         <div class="row">
-            <img src="/frontend/img/kupon1.gif">
-            <img src="/frontend/img/coupon2.jpg">
-            <img src="/frontend/img/coupon3.jpg">
+            <img src="/aeris/frontend/img/kupon1.gif">
+            <img src="/aeris/frontend/img/coupon2.jpg">
+            <img src="/aeris/frontend/img/coupon3.jpg">
         </div>
     </div>
 </section>
@@ -103,23 +103,23 @@
         <h4>BEST WEEKLY</h4>
         <div class="row">
             <div class="col-3">
-                <a href="/pages/product-page.html">
-                    <img src="/frontend/img/weekly-best1.jpeg">
+                <a href="/aeris/pages/product-page.html">
+                    <img src="/aeris/frontend/img/weekly-best1.jpeg">
                 </a>
             </div>
             <div class="col-3">
-                <a href="/pages/product-page.html">
-                    <img src="/frontend/img/weekly-best2.jpeg">
+                <a href="/aeris/pages/product-page.html">
+                    <img src="/aeris/frontend/img/weekly-best2.jpeg">
                 </a>
             </div>
             <div class="col-3">
-                <a href="/pages/product-page.html">
-                    <img src="/frontend/img/weekly-best3.jpeg">
+                <a href="/aeris/pages/product-page.html">
+                    <img src="/aeris/frontend/img/weekly-best3.jpeg">
                 </a>
             </div>
             <div class="col-3">
-                <a href="/pages/product-page.html">
-                    <img src="/frontend/img/weekly-best4.jpeg">
+                <a href="/aeris/pages/product-page.html">
+                    <img src="/aeris/frontend/img/weekly-best4.jpeg">
                 </a>
             </div>
         </div>
@@ -136,9 +136,9 @@
         <h4>NEW ARRIVALS</h4>
         <div class="row">
             <div class="col-3">
-                <a href="/pages/product-page.html">
+                <a href="/aeris/pages/product-page.html">
                     <div class="frame-card">
-                        <img src="/frontend/img/new-arriver1.jpeg">
+                        <img src="/aeris/frontend/img/new-arriver1.jpeg">
                     <h5>
                         Corduroy Color matching Curly Jumper C111642
                     </h5>
@@ -155,9 +155,9 @@
                 </a>
             </div>
             <div class="col-3">
-                <a href="/pages/product-page.html">
+                <a href="/aeris/pages/product-page.html">
                     <div class="frame-card">
-                        <img src="/frontend/img/new-arriver2.jpeg">
+                        <img src="/aeris/frontend/img/new-arriver2.jpeg">
                         <h5>
                         Sena Sleeve Button half high neck knitted sweater C111553
                         </h5>
@@ -173,9 +173,9 @@
                 </a>
             </div>
             <div class="col-3">
-                <a href="/pages/product-page.html">
+                <a href="/aeris/pages/product-page.html">
                     <div class="frame-card">
-                        <img src="/frontend/img/new-arriver3.jpeg">
+                        <img src="/aeris/frontend/img/new-arriver3.jpeg">
                     <h5>
                         Wool cashmere handmade jacket C111420
                     </h5>
@@ -191,9 +191,9 @@
                 </a>
             </div>
             <div class="col-3">
-                <a href="/pages/product-page.html">
+                <a href="/aeris/pages/product-page.html">
                     <div class="frame-card">
-                        <img src="/frontend/img/new-arriver4.jpeg">
+                        <img src="/aeris/frontend/img/new-arriver4.jpeg">
                     <h5>
                         Disem puff knitwear C101411
                     </h5>
@@ -210,7 +210,7 @@
             </div>
         </div>
         <div class="see-more">
-            <a href="/pages/product-page.html">SEE MORE...</a>
+            <a href="/aeris/pages/product-page.html">SEE MORE...</a>
         </div>
     </div>
 </section>
@@ -219,9 +219,9 @@
 <!--MID BANNER-->
 <section class="mid-banner">
     <div class="container">
-        <img src="/frontend/img/middle_banner1.jpg">
-        <img src="/frontend/img/middle_banner2.jpg">
-        <img src="/frontend/img/middle_banner3.jpg">
+        <img src="/aeris/frontend/img/middle_banner1.jpg">
+        <img src="/aeris/frontend/img/middle_banner2.jpg">
+        <img src="/aeris/frontend/img/middle_banner3.jpg">
     </div>
 </section>
 <!--TUTUP MID BANNER-->
@@ -272,7 +272,7 @@
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="/frontend/libraries/bootstrap/js/bootstrap.js"></script>
+    <script src="/aeris/frontend/libraries/bootstrap/js/bootstrap.js"></script>
 
 
 
