--- a/pages/payment-confirmation.html
+++ b/pages/payment-confirmation.html
@@ -158,14 +158,14 @@
         <div class="row">
             <div class="col-8"></div>
             <div class="col-2">
-                <a href="index.html">
+                <a href="/aeris/">
                     <button class="cancel">
                         CANCEL
                     </button>
                 </a>
             </div>
             <div class="col-2">
-                <a href="order-confirmed.html">
+                <a href="/aeris/pages/order-confirmed.html">
                     <button class="order">
                         ORDER
                     </button>
