--- a/pages/order-page.html
+++ b/pages/order-page.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/frontend/libraries/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="/aeris/frontend/libraries/bootstrap/css/bootstrap.css">
     <!--My Css-->
-    <link rel="stylesheet" href="/frontend/style/main.css">
+    <link rel="stylesheet" href="/aeris/frontend/style/main.css">
 
     <!-- Google Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
 
     <title>AERIS</title>
   </head>
-  <link rel="icon" type="image/x-icon" href="/frontend/img/favicon.png">
+  <link rel="icon" type="image/x-icon" href="/aeris/frontend/img/favicon.png">
   <body>
 <!--Header-->
 <header class="header">
@@ -31,9 +31,9 @@
             </div>
             <div class="col-2">
                 <div class="row py-2">
-                    <img src="/frontend/img/person.svg">
-                    <img src="/frontend/img/search.svg">
-                    <img src="/frontend/img/shopping_bag.svg">
+                    <img src="/aeris/frontend/img/person.svg">
+                    <img src="/aeris/frontend/img/search.svg">
+                    <img src="/aeris/frontend/img/shopping_bag.svg">
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
                     <td>
                         <div class="row">
                             <div class="col-3">
-                                <img src="/frontend/img/new-arriver2.jpeg" >
+                                <img src="/aeris/frontend/img/new-arriver2.jpeg" >
                             </div>
                             <div class="col-9">
                                 <h5>
@@ -252,14 +252,14 @@
         <div class="row">
             <div class="col-8"></div>
             <div class="col-2">
-                <a href="index.html">
+                <a href="/aeris/">
                     <button class="cancel">
                         CANCEL
                     </button>
                 </a>
             </div>
             <div class="col-2">
-                <a href="payment-confirmation.html">
+                <a href="/aeris/pages/payment-confirmation.html">
                     <button class="order">
                         ORDER
                     </button>
@@ -317,7 +317,7 @@
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="/frontend/libraries/bootstrap/js/bootstrap.js"></script>
+    <script src="/aeris/frontend/libraries/bootstrap/js/bootstrap.js"></script>
 
 
 
